--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,18 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "icons": []
+  "icons": [
+    {
+      "src": "/web-app-manifest-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/web-app-manifest-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
 }
